--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,10 @@ jobs:
 
     - name: Fix routes in docker-compose.yml
       run: |
-        sed -i 's|build: \./|build: ../|g' ./docker-compose.yml
+        sed -i 's|build: \./|build: ../|g' ./docker/docker-compose.yml
         echo "Updated content from docker-compose.yml:"
-        cat ./docker-compose.yml
+        cat ./docker/docker-compose.yml
 
     - name: Execute Docker Compose
       run: |
-        docker-compose -f ./docker-compose.yml up -d
+        docker-compose -f ./docker/docker-compose.yml up -d
