--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
       
     - name: Set permissions for private key
       run: |
-        echo "C:\Users\Ariel\Downloads\KeyGroup16Veterinary.pem" > key.pem
+        echo "${{ secrets.AWS_PRIVATE_KEY }}" > key.pem
         chmod 600 key.pem
 
     
