--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
       
     - name: Set permissions for private key
       run: |
-        echo "${{ secrets.AWS_PRIVATE_KEY }}" | base64 --decode > key.pem
+        echo "${{ secrets.AWS_PRIVATE_KEY }}" > key.pem
         chmod 600 key.pem
 
     - name: Pull Docker images
